--- a/loadingscreen/index.html
+++ b/loadingscreen/index.html
@@ -22,7 +22,7 @@
 
     <div class="videobox">
       <video id="mainplayer">
-        <source src="assets/media/showcase.mp4" type="video/mp4" />
+        <source src="assets/video/loading.mp4" type="video/mp4" />
       </video>
 
     </div>
